src/index.css
@import "tailwindcss";

button:hover {
  filter: brightness(0.9);
}

@keyframes fadeInUp {
  from {
    opacity: 0;
    transform: translateY(20px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.animate-fadeInUp {
  animation: fadeInUp 0.5s ease forwards;
}

.animate-fadeInUp-delay {
  animation: fadeInUp 0.5s ease 0.2s forwards;
  opacity: 0;
}

.animate-fadeInUp-delay-2 {
  animation: fadeInUp 0.5s ease 0.4s forwards;
  opacity: 0;
}

